    - experimental support for compressed 24 bit samples
    - fixed decompression on big-endian CPUs
    - fixed decompression bug that truncated the last block of samples
    - external decompression buffers can now be used for streaming samples
      to avoid race conditions in case of multiple streaming threads
    - added pre-calculated sample attenuation parameter

  * src/gigdump.cpp:
    - added output of UnityNote and FineTune
    - added output of Gain and SampleStartOffset

  * src/gigextract.cpp:
    - support for compressed mono samples and compressed 24 bit samples

Version 1.0.0 (26 Nov 2004)

  * packaging changes:
    - renamed 'libgig.pc.in' -> 'gig.pc.in' and renamed pkg-config lib name
      'libgig' -> 'gig' as it's common practice to omit the 'lib' prefix
    - fixed man pages automake install rule (which didn't work on Mandrake,
      SuSE and Fedora)
    - fixed generation of Doxygen API documentation (now also included in
      RPM and Debian packages)

  * src/gig.cpp, src/gig.h:
    - fixed / improved accuracy of all three velocity to volume
      transformation functions a.k.a. 'nonlinear','linear','special'
      (patch by Andreas Persson)
    - denormals are filtered from the velocity to volume tables
    - bugfix for dimension region switching (wrong handling of the release
      trigger dimension, no bit range check for dimensions of split type
      'split_type_bit')
    - fixed panorama value in DimensionRegion (invalid conversion from
      signed 7 bit to signed 8 bit)
    - added class attribute 'Layers' to class 'gig::Region'
    - symbol prototyping of gig::Region (fixes build failure with qsampler)

  * src/gigextract.cpp:
    - added support for libsndfile (if libaudiofile and libsndfile are
      available then libsndfile is preferred)

  * src/gigdump.cpp:
    - added printout for dimension informations (amount, type, bits, zones)
    - added printout for velocity response curve parameters